--- a/style.css
+++ b/style.css
@@ -85,7 +85,8 @@ h2:before {
 }
 
 .portfolio > p,
-.feature > p {
+.feature > p,
+.profile > p {
   padding: 30px 0;
 }
 
@@ -142,7 +143,7 @@ h2:before {
   background-position: center;
 }
 
-/* フィーチャー */
+/* Feature */
 .feature {
   width: 980px;
   padding: 90px 0;
@@ -174,4 +175,52 @@ h6 {
 
 .strength > p {
   text-align: left;
+}
+
+/* Profile */
+.profile {
+  background-color: #eceff1;
+  padding: 90px 0;
+  text-align: center;
+}
+
+.profile-container {
+  display: flex;
+  width: 1024px;
+  margin: 0 auto;
+}
+
+.image-container {
+  width: 512px;
+}
+
+.profile-image {
+  width: 250px;
+  height: 250px;
+  background-image: url(img/my-icon.jpg);
+  border-radius: 50%;
+  background-position: center;
+  background-size: cover;
+  margin: 0 auto;
+}
+
+.profile-content {
+  width: 512px;
+}
+
+.name > h6,
+.skill > h6 {
+  font-size: 20px;
+  padding-bottom: 5px;
+  text-align: left;
+}
+
+.name > p,
+.skill > p {
+  font-size: 16px;
+  text-align: left;
+}
+
+.name > p {
+  padding-bottom: 20px;
 }
