--- a/style.css
+++ b/style.css
@@ -280,3 +280,13 @@ h2:before {
 .sns :nth-child(3) {
   padding: 0 20px;
 }
+
+/* Footer */
+footer {
+  height: 60px;
+  background-color: #ec715f;
+  font-size: 16px;
+  color: #fafafa;
+  text-align: center;
+  line-height: 60px;
+}
