[Fix]contact-contentの位置修正

--- a/style.css
+++ b/style.css
@@ -264,6 +264,7 @@ h2:before {
 
 .mail {
   display: table;
+  width: 128px;
   padding-bottom: 20px;
   margin: 0 auto;
   justify-content: center;
